# hearthmate

./: .gitignore  AGENTS.md  README.md  adafruit_mlx90640.py  airvent.py  code.py  connections.py  damper.py  hardware.py  homeassistant.py  hw_test.py  logging.py  measurement_buffer.py  numpy_mlx90640.py  requirements.txt  state_machine.py  stovelink.py  thermal_camera.py  vent_closer.py  vent_mover.py
service/: DEPLOYMENT.md  INSTALLATION_SUMMARY.txt  QUICKSTART.md  README.md  config.example.yaml  install.sh  pyproject.toml  stovelink-service.service  stovelink_service.py  test_stovelink_service.py
